src/test/compile-fail/block-must-not-have-result-for.rs
// error-pattern:mismatched types: expected `()` but found `bool`

fn main() {
    for vec::iter([0]) {|_i|
        true
    }
}